feat: improve gateway OpenAPI examples
